fixed syntax error and z-index

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -37,7 +37,7 @@
   line-height: 30px;
 }
 .about__paragraph {
-  margin: 0, 0, 20px;
+  margin: 0 0 20px;
 }
 .about__paragraph:last-child {
   margin: 0;
