--- a/blocks/header.css
+++ b/blocks/header.css
@@ -36,6 +36,7 @@
   font-size: 20px;
   line-height: 30px;
   margin: 28px 0 0;
+  z-index: 1;
 }
 .header__span-accent {
   display: block;
